--- a/Web/Views/Users/Details.cshtml
+++ b/Web/Views/Users/Details.cshtml
@@ -31,6 +31,7 @@
 {
 
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+    <span>|</span>
     <a asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
 
 }
@@ -39,6 +40,7 @@ else if (_signInManager.IsSignedIn(User) && User.Identity.Name == Model.UserName
 {
 
     <a asp-action="UserEdit" asp-route-id="@Model.Id">Edit</a>
+    <span>|</span>
     <a asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
 
 }
